# vbfcprw

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  build-instructions.md  setup.py  timings
HLeptonsCPRW/: HLeptonsCPRWDict.h  OptObsEventStore.h  TQOptObsObservable.h  WeightAndOptObsWrapper.h  selection.xml
Root/: LinkDef.h  OptObsEventStore.cxx  TQOptObsObservable.cxx  WeightAndOptObsWrapper.cxx  weightandoptobs.f
cmt/: Makefile.RootCore  precompile.RootCore
examples/: Makefile  testCPRW.cxx  testCPRW.py  testTQCPRW.cxx  testTQCPRW.py
python/: HLeptonsCPRW.py  __init__.py
test/: Makefile  testCPRW.cxx
vbfcprw/: __init__.py  pdf.py  test_vbfcprw.py  vbfcprw.py
